--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,40 @@
 asgiref==3.2.10
+attrs==19.3.0
+certifi==2020.6.20
+chardet==3.0.4
+click==7.1.2
+click-plugins==1.1.1
+cligj==0.5.0
 defusedxml==0.6.0
 diff-match-patch==20200713
 Django==3.0.8
 django-cors-headers==3.4.0
 django-import-export==2.3.0
 djangorestframework==3.11.0
+djangorestframework-gis==0.15
 et-xmlfile==1.0.1
+Fiona==1.8.13.post1
 GDAL==3.0.4
+geojson==2.5.0
+geopandas==0.8.1
+idna==2.10
 jdcal==1.4.1
 MarkupPy==1.14
+munch==2.5.0
+numpy==1.19.1
 odfpy==1.4.1
 openpyxl==3.0.4
+pandas==1.1.0
 psycopg2==2.8.5
+pyproj==2.6.1.post1
+python-dateutil==2.8.1
 pytz==2020.1
 PyYAML==5.3.1
+requests==2.24.0
+Shapely==1.7.0
+six==1.15.0
 sqlparse==0.3.1
 tablib==2.0.0
+urllib3==1.25.10
 xlrd==1.2.0
 xlwt==1.3.0
